--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
     "url": "git+https://github.com/sonicsmith/eth-ical-rice-contracts.git"
   },
   "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "author": "thesonicsmith@gmail.com",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "scripts": {
     "test": "forge test",
-    "deploy": "forge script script/ETHicalRice.s.sol:ETHicalRiceScript --broadcast -vvvv --rpc-url testnet"
+    "deploy": "forge script script/ETHicalRice.s.sol:ETHicalRiceScript --broadcast --verify -vvvv --rpc-url testnet"
   }
 }
